Adjusting layout and adding action to small warning

--- a/mvCommerce/Views/ShoppingCart/Index.cshtml
+++ b/mvCommerce/Views/ShoppingCart/Index.cshtml
@@ -101,15 +101,15 @@
                         <dl class="dlist-align">
                             <dt>CEP:  </dt>
                             <div class="input-group-prepend">
-                                <input class="form-control cep col-md-6" type="text" name="cep" placeholder="00.000-000"/>
+                                <input class="form-control cep col-md-6" type="text" name="cep" placeholder="00.000-000" />
                                 <a href="#" class="btn btn-outline-info btn-calc-freight ml-2">OK</a>
 
                             </div>
                         </dl>
-                    <div class="container-freight">
+                        <div class="container-freight">
+                        </div>
                     </div>
-                    </div>
-                </div> 
+                </div>
             </aside>
             <aside class="col-md-4">
                 <h4 class="subtitle-doc">
@@ -130,11 +130,13 @@
                             <dd class="text-right resume total text-center">R$ 0,00</dd>
                         </dl>
                     </div>
-                </div> 
+                </div>
             </aside>
-            <aside class="col-md-4">
-               <a class="btn btn-info disabled btn-continue" href="#">Continuar</a>
+            <aside class="col-md-3">
+                <small class="select-freight" style="font-size:smaller;">Para continuar selecione uma opção de frete</small>
+                <a class="btn btn-info disabled btn-continue col-md-12" href="#">Continuar</a>
             </aside>
+            
         </div>
     </section>
 </div>
