--- a/mvCommerce/Views/ShoppingCart/Index.cshtml
+++ b/mvCommerce/Views/ShoppingCart/Index.cshtml
@@ -7,85 +7,94 @@
 <div class="container">
     <section class="container" id="order" style="margin-top: 50px">
 
-        <h2 class="title-doc">Meu Carrinho</h2>
-      <!-- Show error message -->  <div class="alert alert-danger text-center" style="display:none" role="alert"> </div>
-       
-        <div id="code_cart">
-            <div class="card">
-                <table class="table table-hover shopping-cart-wrap">
-                    <thead class="text-muted">
-                        <tr>
-                            <th scope="col">Produto</th>
-                            <th scope="col" width="120">Quantidade</th>
-                            <th scope="col" width="170">Preço</th>
-                            <th scope="col" width="280" class="text-right">Ação</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model)
-                        {
-                            <tr>
-                                <td>
-                                    <figure class="media">
-                                        <div class="img-wrap">
-                                            @if (item.Images != null && item.Images.Count > 0)
-                                            {
-                                                <a class="big-image" href="@item.Images.ElementAt(0).Path" data-fancybox><img src="@item.Images.ElementAt(0).Path"></a>
-                                            }
-                                            else
-                                            {
-                                                <a href="~/img/default-img.png" data-fancybox><img src="~/img/default-img.png"></a>
-                                            }
-                                        </div>
-                                        <figcaption class="media-body">
-                                            <h6 class="title text-truncate">@item.Name</h6>
-                                            <dl class="dlist-inline small">
-                                                <dt>Size: </dt>
-                                                <dd>XXL</dd>
-                                            </dl>
-                                            <dl class="dlist-inline small">
-                                                <dt>Quantidade: </dt>
-                                                <dd>@item.AmountProductsCart</dd>
-                                            </dl>
-                                        </figcaption>
-                                    </figure>
-                                </td>
-                                <td>
-                                    <div class="col-auto">
-                                        <div class="input-group mb-2">
-                                            <input type="hidden" value="@item.Id" class="inputProductId"/>
-                                            <input type="hidden" value="@item.Amount" class="inputAmountStore"/>
-                                            <input type="hidden" value="@item.Price" class="inputValueUnit"/>
-                                            <div class="input-group-prepend">
-                                                <a class="btn btn-outline-info amount amountLarger" style="width: 60px"> + </a>
-                                            </div>
-                                            <input class="inputAmountProductCart" readonly="readonly" type="text" value="@item.AmountProductsCart" style="width: 60px; border:none; text-align:center;" />
-                                            <div class="input-group-append"> 
-                                                <a  class="btn btn-outline-info amount amountLess" style="width: 60px"> - </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </td>
-                                @{ 
-                                    var subTotalItem = item.Price * item.AmountProductsCart;
-                                    subTotal += subTotalItem;
-                                }
-                                <td>
-                                    <div class="price-wrap col-md-12" style="width:250px;">
-                                        <var class="price"><small>Total: </small> <span style="font-size:x-large" class="priceProduct">@subTotalItem.ToString("C")</span></var>
-                                        <small class="text-muted">(@item.Price.ToString("C") cada)</small>
-                                    </div> <!-- price-wrap .// -->
-                                </td>
-                                <td class="text-right">
-                                    <a asp-controller="ShoppingCart" asp-action="RemoveItem" asp-route-id="@item.Id" class="btn btn-outline-danger"> × Remover</a>
-                                </td>
-                            </tr>
 
-                        }
-                    </tbody>
-                </table>
+        <!-- Show error message -->  <div class="alert alert-danger text-center" style="display:none" role="alert"> </div>
+        @if (Model.Count == 0)
+        {
+            <div class="container text-center">Nenhum produto foi adicionado ao carrinho! <a asp-controller="Home" asp-action="Index" style="color:red">Clique aqui para comprar</a></div>
+
+        }
+        else
+        {
+            <h2 class="title-doc">Meu Carrinho</h2>
+            <div id="code_cart">
+                <div class="card">
+                    <table class="table table-hover shopping-cart-wrap">
+                        <thead class="text-muted">
+                            <tr>
+                                <th scope="col">Produto</th>
+                                <th scope="col" width="120">Quantidade</th>
+                                <th scope="col" width="170">Preço</th>
+                                <th scope="col" width="280" class="text-right">Ação</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>
+                                        <figure class="media">
+                                            <div class="img-wrap">
+                                                @if (item.Images != null && item.Images.Count > 0)
+                                                {
+                                                    <a class="big-image" href="@item.Images.ElementAt(0).Path" data-fancybox><img src="@item.Images.ElementAt(0).Path"></a>
+                                                }
+                                                else
+                                                {
+                                                    <a href="~/img/default-img.png" data-fancybox><img src="~/img/default-img.png"></a>
+                                                }
+                                            </div>
+                                            <figcaption class="media-body">
+                                                <h6 class="title text-truncate">@item.Name</h6>
+                                                <dl class="dlist-inline small">
+                                                    <dt>Descrição: </dt>
+                                                    <dd>@item.Description</dd>
+                                                </dl>
+                                                <dl class="dlist-inline small">
+                                                    <dt>Quantidade selecionada: </dt>
+                                                    <dd>@item.AmountProductsCart</dd>
+                                                </dl>
+                                            </figcaption>
+                                        </figure>
+                                    </td>
+                                    <td>
+                                        <div class="col-auto">
+                                            <div class="input-group mb-2 control-inline">
+                                                <input type="hidden" value="@item.Id" class="inputProductId" />
+                                                <input type="hidden" value="@item.Amount" class="inputAmountStore" />
+                                                <input type="hidden" value="@item.Price" class="inputValueUnit" />
+                                                <div class="input-group-append">
+                                                    <a class="btn btn-outline-info amount amountLess" style="width: 30px"> - </a>
+                                                </div>
+
+                                                <input class="inputAmountProductCart" readonly="readonly" type="text" value="@item.AmountProductsCart" style="width: 60px; border:none; text-align:center;" />
+                                                <div class="input-group-prepend">
+                                                    <a class="btn btn-outline-info amount amountLarger" style="width: 32px"> + </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </td>
+                                    @{
+                                        var subTotalItem = item.Price * item.AmountProductsCart;
+                                        subTotal += subTotalItem;
+                                    }
+                                    <td>
+                                        <div class="price-wrap col-md-12" style="width:250px;">
+                                            <var class="price"><small>Total: </small> <span style="font-size:x-large" class="priceProduct">@subTotalItem.ToString("C")</span></var>
+                                            <small class="text-muted">(@item.Price.ToString("C") cada)</small>
+                                        </div> <!-- price-wrap .// -->
+                                    </td>
+                                    <td class="text-right">
+                                        <a asp-controller="ShoppingCart" asp-action="RemoveItem" asp-route-id="@item.Id" class="btn btn-outline-danger">Remover</a>
+                                    </td>
+                                </tr>
+
+                            }
+                        </tbody>
+                    </table>
+                </div>
             </div>
-        </div>
+        }
     </section>
     <br />
     <br />
@@ -100,11 +109,11 @@
                     <div class="box text-center">
                         <dl class="dlist-align">
                             <dt>CEP:  </dt>
-                            <div class="input-group-prepend">
+                            <dd class="input-group-prepend">
                                 <input class="form-control cep col-md-6" type="text" name="cep" placeholder="00.000-000" />
                                 <a href="#" class="btn btn-outline-info btn-calc-freight ml-2">OK</a>
 
-                            </div>
+                            </dd>
                         </dl>
                         <div class="container-freight">
                         </div>
@@ -133,10 +142,10 @@
                 </div>
             </aside>
             <aside class="col-md-3">
-                <small class="select-freight" style="font-size:smaller;">Para continuar selecione uma opção de frete</small>
-                <a class="btn btn-info disabled btn-continue col-md-12" href="#">Continuar</a>
+                <small class="select-freight" style="font-size:small;">Para pagar selecione uma opção de frete</small>
+                <a class="btn btn-info disabled btn-pay  col-md-12" href="#">Pagar</a>
             </aside>
-            
+
         </div>
     </section>
 </div>
