--- a/mvCommerce/Views/Home/Login.cshtml
+++ b/mvCommerce/Views/Home/Login.cshtml
@@ -21,7 +21,9 @@
                             {
                                 <p class="alert alert-danger"><b>@Html.Raw(ViewData["MSG_E"])</b></p>
                             }
+
                             <a asp-action="RegisterClient" asp-controller="Home" class="btn btn-outline-info my-2 my-sm-0 float-right" id="signUp">Cadastre-se</a>
+                            <small class="float-right mr-2 mt-2">Ainda não é cadastrado ? </small>
                             <h4 class="card-title mb-4 mt-1">Entrar</h4>
                             <form method="post">
                                 <div class="form-group">
@@ -36,7 +38,7 @@
                                             <input asp-for="Email" class="form-control" placeholder="Email" type="email">
                                         </div>
                                     </div>
-                                    
+
                                 </div>
                                 <div class="form-group">
                                     <a class="float-right" href="#">Esqueceu sua senha?</a>
