--- a/mvCommerce/Views/Payments/Index.cshtml
+++ b/mvCommerce/Views/Payments/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model List<mvCommerce.Models.ProductAggregator.ProductItem>
 @{
     ViewData["Title"] = "Payments";
+    decimal subTotal = 0;
 }
 
 <br />
@@ -21,7 +22,7 @@
                         <p class="alert alert-success">Total: R$ 1520,11</p>
                         <div id="code_itemside_img2">
                             <div class="box items-bordered-wrap">
-                                @foreach(var item in Model)
+                                @foreach (var item in Model)
                                 {
                                     <figure class="itemside">
                                         <div class="aside">
@@ -35,16 +36,39 @@
                                             }
                                         </div>
                                         <figcaption class="text-wrap align-self-center">
-                                            <h6 class="title">@item.Name</h6>
+                                            @{
+                                                var subTotalItem = item.Price * item.AmountProductsCart;
+                                                subTotal += subTotalItem;
+                                            }
+                                            <strong class="title">@item.Name.ToUpper()</strong>
                                             <div class="price-wrap">
-                                                <span class="price-new">@item.Price.ToString("C")</span>
-                                            </div> 
+                                                <span class="price-new">@item.Price.ToString("C") x @item.AmountProductsCart = <strong>@subTotalItem.ToString("C")</strong></span>
+                                            </div>
                                         </figcaption>
                                     </figure>
                                 }
-
-                            </div> 
-
+                            </div>
+                            <br />
+                            <br />
+                            <aside class="col-md-10">
+                                <h4 class="subtitle-doc">
+                                    Resumo
+                                </h4>
+                                <div class="box">
+                                    <dl class="dlist-align">
+                                        <dt>Subtotal: </dt>
+                                        <dd class="text-right resume subtotal text-center">@subTotal.ToString("C")</dd>
+                                    </dl>
+                                    <dl class="dlist-align">
+                                        <dt>Frete:</dt>
+                                        <dd class="text-right resume freight text-center">PAC/SEDEX R$ 0,00</dd>
+                                    </dl>
+                                    <dl class="dlist-align">
+                                        <dt>TOTAL:</dt>
+                                        <dd class="text-right resume total text-center">R$ 0,00</dd>
+                                    </dl>
+                                </div>
+                                </aside>
                         </div>
                 </article> 
 
@@ -69,19 +93,14 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link btn btn-outline-info  mr-2" data-toggle="pill" href="#nav-tab-paypal">
-                                    <i class="fab fa-paypal"></i> Paypal
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link btn btn-outline-info" data-toggle="pill" href="#nav-tab-bank">
-                                    <i class="fa fa-university"></i> Bank Transfer
+                                    <i class="fa fa-barcode"></i> Boleto
                                 </a>
                             </li>
                         </ul>
 
                         <div class="tab-content">
                             <div class="tab-pane fade show active" id="nav-tab-card">
-                                <p class="alert alert-success">Some text success or error</p>
+                                <p class="alert alert-danger">Some text success or error</p>
                                 <form role="form">
                                     <div class="form-group">
                                         <label for="username">Nome completo (no cartão)</label>
@@ -107,7 +126,7 @@
                                     <div class="row">
                                         <div class="col-sm-8">
                                             <div class="form-group">
-                                                <label><span class="hidden-xs">Data</span> </label>
+                                                <label><span class="hidden-xs">Vencimento</span> </label>
                                                 <div class="input-group">
                                                     <input type="number" class="form-control" placeholder="MM"
                                                            name="">
@@ -132,39 +151,17 @@
                                 </form>
                             </div> 
                             <div class="tab-pane fade" id="nav-tab-paypal">
-                                <p>Paypal is easiest way to pay online</p>
+                                <p>Imprima seu boleto aqui ...</p>
                                 <p>
                                     <button type="button" class="btn btn-primary">
-                                        <i class="fab fa-paypal"></i>
-                                        Log in my Paypal
+                                        <i class="fa fa-barcode"></i>
+                                       Imprimir boleto
                                     </button>
                                 </p>
                                 <p>
-                                    <strong>Note:</strong> Lorem ipsum dolor sit amet, consectetur adipisicing
-                                    elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua.
+                                    <strong>Nota:</strong> O boleto expira em 3 dias após gerado!
                                 </p>
                             </div>
-                            <div class="tab-pane fade" id="nav-tab-bank">
-                                <p>Bank accaunt details</p>
-                                <dl class="param">
-                                    <dt>BANK: </dt>
-                                    <dd> THE WORLD BANK</dd>
-                                </dl>
-                                <dl class="param">
-                                    <dt>Accaunt number: </dt>
-                                    <dd> 12345678912345</dd>
-                                </dl>
-                                <dl class="param">
-                                    <dt>IBAN: </dt>
-                                    <dd> 123456789</dd>
-                                </dl>
-                                <p>
-                                    <strong>Note:</strong> Lorem ipsum dolor sit amet, consectetur adipisicing
-                                    elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua.
-                                </p>
-                            </div> 
                         </div>
 
                     </div>
