Refactoring and creating area for the client

--- a/mvCommerce/Views/Payments/Index.cshtml
+++ b/mvCommerce/Views/Payments/Index.cshtml
@@ -147,7 +147,7 @@
                                             </div>
                                         </div>
                                     </div> 
-                                    <button class="subscribe btn btn-outline-info btn-block" type="button">
+                                    <button class="subscribe btn btn-info btn-block" style="height:45px; font-size:large" type="button">
                                         Confirmar
                                     </button>
                                 </form>
