Implementing user name on login button

--- a/mvCommerce/Areas/Client/Views/Home/RegisterClient.cshtml
+++ b/mvCommerce/Areas/Client/Views/Home/RegisterClient.cshtml
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="~/css/RegisterClient.css"/>
 </head>
 <main role="main">
-    <form asp-action="RegisterClient" asp-controller="Home" method="post">
+    <form asp-action="RegisterClient" asp-controller="Home" asp-area="Client" method="post">
         <section class="container" style="margin-top: 50px">
             <div class="row">
                 <aside class="col-sm-8">
